-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.11.0 Alpha
-
None
-
c041711febbee334ce5369f25cfae3f560819855
https://codereview.qt-project.org/#/c/216127/ Update submodules on 'dev' in qt5
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1516057540
https://testresults.qt.io/coin/api/results/qt/qtwebengine/3d3bae1b42e85cef5b53f9d0fe2039d4b8d84fc9/LinuxUbuntu_16_04x86_64LinuxUbuntu_16_04x86_64GCCqtci-linux-Ubuntu-16.04-x86_64-2-e8d94eDeveloperBuild_OutOfSourceBuild_QtLibInfix_QtNamespace_BuildExamples_Documentation/a18554430dbcef42fb3c8eaee4209aaf0fdde4da/build_1516060148/log.txt.gz
g++ -c -pipe -g -Og -std=gnu++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_WEBENGINEWIDGETS_LIB -DQT_WEBENGINECORE_LIB -DQT_QUICK_LIB -DQT_PRINTSUPPORT_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_WEBCHANNEL_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_POSITIONING_LIB -DQT_CORE_LIB -DQT_NAMESPACE=TestNamespace -I/home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser -I. -I../../../include -I../../../include/QtWebEngineWidgets -I../../../include/QtWebEngineCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtPrintSupport -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtWebChannel -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtPositioning -I/home/qt/work/install/include/QtCore -I.moc -isystem /usr/include/libdrm -I.uic -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/moc_downloadmanagerwidget.o .moc/moc_downloadmanagerwidget.cpp /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp: In member function ‘virtual bool WebPage::certificateError(const TestNamespace::QWebEngineCertificateError&)’: /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp:77:39: error: invalid use of incomplete type ‘class TestNamespace::QStyle’ QIcon icon(mainWindow->style()->standardIcon(QStyle::SP_MessageBoxWarning, 0, mainWindow)); ^ In file included from /home/qt/work/install/include/QtWidgets/qmainwindow.h:44:0, from /home/qt/work/install/include/QtWidgets/QMainWindow:1, from /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/browserwindow.h:54, from /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp:51: /home/qt/work/install/include/QtWidgets/qwidget.h:67:7: note: forward declaration of ‘class TestNamespace::QStyle’ class QStyle; ^ /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp:77:54: error: incomplete type ‘TestNamespace::QStyle’ used in nested name specifier QIcon icon(mainWindow->style()->standardIcon(QStyle::SP_MessageBoxWarning, 0, mainWindow)); ^ /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp: In member function ‘void WebPage::handleAuthenticationRequired(const TestNamespace::QUrl&, TestNamespace::QAuthenticator*)’: /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp:99:35: error: invalid use of incomplete type ‘class TestNamespace::QStyle’ QIcon icon(mainWindow->style()->standardIcon(QStyle::SP_MessageBoxQuestion, 0, mainWindow)); ^ In file included from /home/qt/work/install/include/QtWidgets/qmainwindow.h:44:0, from /home/qt/work/install/include/QtWidgets/QMainWindow:1, from /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/browserwindow.h:54, from /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp:51: /home/qt/work/install/include/QtWidgets/qwidget.h:67:7: note: forward declaration of ‘class TestNamespace::QStyle’ class QStyle; ^ /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp:99:50: error: incomplete type ‘TestNamespace::QStyle’ used in nested name specifier QIcon icon(mainWindow->style()->standardIcon(QStyle::SP_MessageBoxQuestion, 0, mainWindow)); ^ g++ -c -pipe -g -Og -std=gnu++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_WEBENGINEWIDGETS_LIB -DQT_WEBENGINECORE_LIB -DQT_QUICK_LIB -DQT_PRINTSUPPORT_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_WEBCHANNEL_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_POSITIONING_LIB -DQT_CORE_LIB -DQT_NAMESPACE=TestNamespace -I/home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser -I. -I../../../include -I../../../include/QtWebEngineWidgets -I../../../include/QtWebEngineCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtPrintSupport -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtWebChannel -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtPositioning -I/home/qt/work/install/include/QtCore -I.moc -isystem /usr/include/libdrm -I.uic -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/moc_downloadwidget.o .moc/moc_downloadwidget.cpp /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp: In member function ‘void WebPage::handleProxyAuthenticationRequired(const TestNamespace::QUrl&, TestNamespace::QAuthenticator*, const TestNamespace::QString&)’: /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp:127:35: error: invalid use of incomplete type ‘class TestNamespace::QStyle’ QIcon icon(mainWindow->style()->standardIcon(QStyle::SP_MessageBoxQuestion, 0, mainWindow)); ^ In file included from /home/qt/work/install/include/QtWidgets/qmainwindow.h:44:0, from /home/qt/work/install/include/QtWidgets/QMainWindow:1, from /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/browserwindow.h:54, from /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp:51: /home/qt/work/install/include/QtWidgets/qwidget.h:67:7: note: forward declaration of ‘class TestNamespace::QStyle’ class QStyle; ^ /home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser/webpage.cpp:127:50: error: incomplete type ‘TestNamespace::QStyle’ used in nested name specifier QIcon icon(mainWindow->style()->standardIcon(QStyle::SP_MessageBoxQuestion, 0, mainWindow)); ^ g++ -c -pipe -g -Og -std=gnu++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_WEBENGINEWIDGETS_LIB -DQT_WEBENGINECORE_LIB -DQT_QUICK_LIB -DQT_PRINTSUPPORT_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_WEBCHANNEL_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_POSITIONING_LIB -DQT_CORE_LIB -DQT_NAMESPACE=TestNamespace -I/home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser -I. -I../../../include -I../../../include/QtWebEngineWidgets -I../../../include/QtWebEngineCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtPrintSupport -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtWebChannel -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtPositioning -I/home/qt/work/install/include/QtCore -I.moc -isystem /usr/include/libdrm -I.uic -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/moc_tabwidget.o .moc/moc_tabwidget.cpp g++ -c -pipe -g -Og -std=gnu++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_WEBENGINEWIDGETS_LIB -DQT_WEBENGINECORE_LIB -DQT_QUICK_LIB -DQT_PRINTSUPPORT_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_WEBCHANNEL_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_POSITIONING_LIB -DQT_CORE_LIB -DQT_NAMESPACE=TestNamespace -I/home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser -I. -I../../../include -I../../../include/QtWebEngineWidgets -I../../../include/QtWebEngineCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtPrintSupport -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtWebChannel -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtPositioning -I/home/qt/work/install/include/QtCore -I.moc -isystem /usr/include/libdrm -I.uic -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/moc_webpage.o .moc/moc_webpage.cpp g++ -c -pipe -g -Og -std=gnu++11 -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_WEBENGINEWIDGETS_LIB -DQT_WEBENGINECORE_LIB -DQT_QUICK_LIB -DQT_PRINTSUPPORT_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_WEBCHANNEL_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_POSITIONING_LIB -DQT_CORE_LIB -DQT_NAMESPACE=TestNamespace -I/home/qt/work/qt/qtwebengine/examples/webenginewidgets/simplebrowser -I. -I../../../include -I../../../include/QtWebEngineWidgets -I../../../include/QtWebEngineCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtPrintSupport -I/home/qt/work/install/include/QtWidgets -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtWebChannel -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtPositioning -I/home/qt/work/install/include/QtCore -I.moc -isystem /usr/include/libdrm -I.uic -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/moc_webpopupwindow.o .moc/moc_webpopupwindow.cpp Makefile:2641: recipe for target '.obj/webpage.o' failed make[3]: *** [.obj/webpage.o] Error 1 make[3]: *** Waiting for unfinished jobs.... g++ -fuse-ld=gold -Wl,--enable-new-dtags -Wl,--gdb-index -Wl,-z,origin -Wl,-rpath,\$ORIGIN/../../../lib -Wl,-rpath,\$ORIGIN/../../../lib -Wl,-rpath-link,/home/qt/work/build/lib -Wl,-rpath-link,/home/qt/work/install/lib -o videoplayer .obj/main.o .obj/mainwindow.o .obj/fullscreenwindow.o .obj/fullscreennotification.o .obj/qrc_videoplayer.o .obj/moc_mainwindow.o .obj/moc_fullscreenwindow.o .obj/moc_fullscreennotification.o -L/home/qt/work/build/lib -lQt5WebEngineWidgetsTestInfix -L/home/qt/work/install/lib -lQt5WebEngineCoreTestInfix -lQt5QuickTestInfix -lQt5PrintSupportTestInfix -lQt5WidgetsTestInfix -lQt5GuiTestInfix -lQt5WebChannelTestInfix -lQt5QmlTestInfix -lQt5NetworkTestInfix -lQt5PositioningTestInfix -lQt5CoreTestInfix -lGL -lpthread make[3]: Leaving directory '/home/qt/work/build/examples/webenginewidgets/videoplayer' make[3]: Leaving directory '/home/qt/work/build/examples/webenginewidgets/simplebrowser' Makefile:178: recipe for target 'sub-simplebrowser-make_first' failed make[2]: *** [sub-simplebrowser-make_first] Error 2 make[2]: *** Waiting for unfinished jobs.... g++ -fuse-ld=gold -Wl,--enable-new-dtags -Wl,--gdb-index -Wl,-z,origin -Wl,-rpath,\$ORIGIN/../../../lib -Wl,-rpath,\$ORIGIN/../../../lib -Wl,-rpath-link,/home/qt/work/build/lib -Wl,-rpath-link,/home/qt/work/install/lib -o contentmanipulation .obj/main.o .obj/mainwindow.o .obj/qrc_jquery.o .obj/moc_mainwindow.o -L/home/qt/work/build/lib -lQt5WebEngineWidgetsTestInfix -L/home/qt/work/install/lib -lQt5WebEngineCoreTestInfix -lQt5QuickTestInfix -lQt5PrintSupportTestInfix -lQt5WidgetsTestInfix -lQt5GuiTestInfix -lQt5WebChannelTestInfix -lQt5QmlTestInfix -lQt5NetworkTestInfix -lQt5PositioningTestInfix -lQt5CoreTestInfix -lGL -lpthread make[3]: Leaving directory '/home/qt/work/build/examples/webenginewidgets/contentmanipulation' make[2]: Leaving directory '/home/qt/work/build/examples/webenginewidgets' Makefile:70: recipe for target 'sub-webenginewidgets-make_first' failed make[1]: *** [sub-webenginewidgets-make_first] Error 2 make[1]: Leaving directory '/home/qt/work/build/examples' Makefile:71: recipe for target 'sub-examples-make_first' failed make: *** [sub-examples-make_first] Error 2
cl -c -nologo -Zc:wchar_t -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -O2 -MD -utf-8 /wd4530 /wd4577 -W3 -w34100 -w34189 -w44996 -w44456 -w44457 -w44458 -wd4577 -wd4467 -DUNICODE -D_UNICODE -DWIN32 -DWIN64 -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_WEBENGINEWIDGETS_LIB -DQT_WEBENGINECORE_LIB -DQT_QUICK_LIB -DQT_PRINTSUPPORT_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_WEBCHANNEL_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_POSITIONING_LIB -DQT_CORE_LIB -DQT_NAMESPACE=TestNamespace -DNDEBUG -I. -I..\..\..\include -I..\..\..\include\QtWebEngineWidgets -I..\..\..\include\QtWebEngineCore -Ic:\Users\qt\work\install\include -Ic:\Users\qt\work\install\include\QtQuick -Ic:\Users\qt\work\install\include\QtPrintSupport -Ic:\Users\qt\work\install\include\QtWidgets -Ic:\Users\qt\work\install\include\QtGui -Ic:\Users\qt\work\install\include\QtANGLE -Ic:\Users\qt\work\install\include\QtWebChannel -Ic:\Users\qt\work\install\include\QtQml -Ic:\Users\qt\work\install\include\QtNetwork -Ic:\Users\qt\work\install\include\QtPositioning -Ic:\Users\qt\work\install\include\QtCore -I.moc\release -I.uic -IC:\VulkanSDK\1.0.51.0\include -IC:\utils\my_sql\my_sql\include -IC:\utils\postgresql\pgsql\include -Ic:\Users\qt\work\install\mkspecs\win32-msvc -Fo.obj\release\ @C:\Users\qt\AppData\Local\Temp\nmA6FC.tmp browser.cpp browserwindow.cpp downloadmanagerwidget.cpp downloadwidget.cpp main.cpp tabwidget.cpp webpage.cpp .\webpage.cpp(77): error C2027: use of undefined type 'TestNamespace::QStyle' c:\users\qt\work\install\include\qtwidgets\qapplication.h(58): note: see declaration of 'TestNamespace::QStyle' .\webpage.cpp(77): error C2227: left of '->standardIcon' must point to class/struct/union/generic type .\webpage.cpp(77): error C2065: 'SP_MessageBoxWarning': undeclared identifier .\webpage.cpp(99): error C2027: use of undefined type 'TestNamespace::QStyle' c:\users\qt\work\install\include\qtwidgets\qapplication.h(58): note: see declaration of 'TestNamespace::QStyle' .\webpage.cpp(99): error C2227: left of '->standardIcon' must point to class/struct/union/generic type .\webpage.cpp(99): error C2065: 'SP_MessageBoxQuestion': undeclared identifier .\webpage.cpp(127): error C2027: use of undefined type 'TestNamespace::QStyle' c:\users\qt\work\install\include\qtwidgets\qapplication.h(58): note: see declaration of 'TestNamespace::QStyle' .\webpage.cpp(127): error C2227: left of '->standardIcon' must point to class/struct/union/generic type .\webpage.cpp(127): error C2065: 'SP_MessageBoxQuestion': undeclared identifier webpopupwindow.cpp webview.cpp Generating Code... NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\amd64\cl.EXE"' : return code '0x2' Stop. NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\amd64\nmake.exe"' : return code '0x2' Stop. NMAKE : fatal error U1077: 'cd' : return code '0x2' Stop. NMAKE : fatal error U1077: 'cd' : return code '0x2' Stop. NMAKE : fatal error U1077: 'cd' : return code '0x2' Stop.
For Gerrit Dashboard: QTBUG-65793 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
216857,4 | Fix compilation of simplebrowser example | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |