Fix compilation of simplebrowser example

Previously qstyle.h was included indirectly through the uic
generated code, but this got changed in qtbase
commit 058474884c2505a8a0.

Task-number: QTBUG-65793
Change-Id: I56a1cd045d53b268999d728f6907ee8d952ba6e9
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>