examples/webenginewidgets/simplebrowser/webpage.cpp
@@ -56,6 +56,7 @@
 #include "webview.h"
 #include <QAuthenticator>
 #include <QMessageBox>
+#include <QStyle>
 
 WebPage::WebPage(QWebEngineProfile *profile, QObject *parent)
     : QWebEnginePage(profile, parent)
